syntax = "proto3";
package proto;

service ProxyService {
    rpc registerGame (registerGameReq) returns (registerGameRes) {
    }
}

message registerGameReq {
    string namespace = 1;
    string port = 2;
    string rpcPort = 3;
}
message registerGameRes {
    bool result = 1;
}